--- a/client/src/sass/pages/_home.scss
+++ b/client/src/sass/pages/_home.scss
@@ -49,6 +49,7 @@
 
 .hero_image_scroller{
   overflow-x: scroll;
+  scrollbar-width: none;
   &::-webkit-scrollbar{
     width: 0;
     height: 0;
